--- a/terceroc.html
+++ b/terceroc.html
@@ -31,9 +31,9 @@
             <div class="item">7:00-7:40</div>
             <a href="https://zoom.us/j/96151061076?pwd=L0hBNkFOamJ4blJxRk8xdmZQSnpCQT09" target="_blank"><div class="item hover">Química</div></a>
             <a href="https://meet.google.com/lookup/hvjlqc27ey" target="_blank"><div class="item hover">Deportes</div></a>
-            <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Administración</div></a>
+            <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Admin</div></a>
             <a href="https://meet.google.com/lookup/dad5hovxmt" target="_blank"><div class="item hover ">Física</div></a>
-            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">T. Redacción</div></a>
+            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">Redacción</div></a>
         </div>
         <div class="row even">
             <div class="item">7:50-8:30</div>
@@ -56,7 +56,7 @@
             <a href="https://us04web.zoom.us/j/75457348291?pwd=Z3VsSm9DSyt5QUF6U0tqVmIrNWw3dz09" target="_blank"><div class="item hover">Metodología</div></a> 
             <a href="https://zoom.us/j/96151061076?pwd=L0hBNkFOamJ4blJxRk8xdmZQSnpCQT09" target="_blank"><div class="item hover">Química</div></a>
             <a href="https://us04web.zoom.us/j/75457348291?pwd=Z3VsSm9DSyt5QUF6U0tqVmIrNWw3dz09" target="_blank"><div class="item hover">Metodología</div></a> 
-            <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Administración</div></a>
+            <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Admin</div></a>
             <a href="https://zoom.us/j/99532840701?pwd=cWhIV3lLaWl3K0c1b0pUak5qWWh4dz09" target="_blank"><div class="item hover">O. Edu</div></a>
         </div>
         <div class="row odd">
@@ -65,15 +65,15 @@
         <div class="row even">
             <div class="item">10:40-11:20</div>
             <a href="https://meet.google.com/lookup/g7e246yz7q" target="_blank"><div class="item hover">O. vida</div></a>
-            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">T. Lectura</div></a>
-            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">T. Lectura</div></a>
+            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">Lectura</div></a>
+            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">Lectura</div></a>
             <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Deportes</div></a>
             <a href="https://zoom.us/j/93614695100?pwd=bHJZa2E4RXhJakI4MldCbjBLVnpKdz09#success" target="_blank"><div class="item hover">Matemáticas</div></a> <!-- usaras este mampo -->
         </div>
         <div class="row odd">
             <div class="item">11:30-12:10</div>
-            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">T. Lectura</div></a>
-            <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Administración</div></a>
+            <a href="https://zoom.us/j/94010508432?pwd=SGVqRmVHSzRRcGRTb1llSXZuNUNRQT09" target="_blank"><div class="item hover">Lectura</div></a>
+            <a href="https://meet.google.com/lookup/hlwnxezks3" target="_blank"><div class="item hover">Admin</div></a>
             <a href="https://zoom.us/j/93614695100?pwd=bHJZa2E4RXhJakI4MldCbjBLVnpKdz09#success" target="_blank"><div class="item hover">Matemáticas</div></a>
             <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item hover">Redacción</div></a> 
             <a href="https://meet.google.com/lookup/abzsxj4are" target="_blank"><div class="item hover">Deportes</div></a>
@@ -88,7 +88,7 @@
         </div>
         <div class="row odd">
             <div class="item">13:10-13:50</div>
-            <a href="https://zoom.us/j/95083649784?pwd=UHlVbHByWFRacHFpUUlRekNVT0VpQT09" target="_blank"><div class="item hover">T. Redacción</div></a>
+            <a href="https://zoom.us/j/95083649784?pwd=UHlVbHByWFRacHFpUUlRekNVT0VpQT09" target="_blank"><div class="item hover">Redacción</div></a>
             <a href="https://meet.google.com/lookup/c4apajabiw" target="_blank"><div class="item hover">Informática</div></a>
             <a href="https://zoom.us/j/97482836545?pwd=enZTbmRKV3lhRmhSeTg3a2VLdnZjUT09" target="_blank"><div class="item hover">Historia</div></a>
             <a href="https://meet.google.com/cax-naoq-ivn" target="_blank"><div class="item hover">O. Vida</div></a>
